--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -86,3 +86,18 @@
   align-items: center;
 }
 
+/* CARD */
+
+.card {
+  background: var(--cardPrimary);
+  border-radius: 16px;
+  box-shadow: var(--shadow) 0px 8px 24px;
+  padding: 30px;
+}
+
+.card-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 8px;
+}
